wacc/test/golden/syntaxErr.basic.badComment
# program has missing comment declaration

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  oops, this is supposed to be a comment
  print "Hello World!\n"
end


(line 12, column 7):
  unexpected ","
  expected "=" or "["
  >begin
  >  oops, this is supposed to be a comment
         ^
  >  print "Hello World!\n"